[gd_scene load_steps=12 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://bg.jpg" type="Texture" id=2]
[ext_resource path="res://MegaPixelArt32x32pxIcons_SpriteSheet/MegaPixelArt32x32pxIcons_SpriteSheet.png" type="Texture" id=3]
[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://octopus.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 480, 32, 32 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 416, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 224, 32, 32 )

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ) ]
}

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="."]
margin_left = -256.0
margin_right = 573.0
margin_bottom = 320.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
editor/display_folded = true
margin_right = 320.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="faim" type="Node2D" parent="Control/HBoxContainer"]
position = Vector2( 304, 16 )

[node name="Sprite2" type="Sprite" parent="Control/HBoxContainer/faim"]
position = Vector2( -288, 0 )
texture = SubResource( 1 )

[node name="Label" type="Label" parent="Control/HBoxContainer/faim"]
margin_left = -272.0
margin_top = -16.0
margin_right = -240.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1

[node name="hygiene" type="Node2D" parent="Control/HBoxContainer"]

[node name="Sprite2" type="Sprite" parent="Control/HBoxContainer/hygiene"]
position = Vector2( 112, 16 )
texture = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Label2" type="Label" parent="Control/HBoxContainer/hygiene"]
margin_left = 128.0
margin_right = 160.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1

[node name="education" type="Node2D" parent="Control/HBoxContainer"]

[node name="Sprite" type="Sprite" parent="Control/HBoxContainer/education"]
position = Vector2( 208, 16 )
texture = SubResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Label3" type="Label" parent="Control/HBoxContainer/education"]
margin_left = 224.0
margin_right = 256.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1

[node name="divertissement" type="Node2D" parent="Control/HBoxContainer"]

[node name="Sprite" type="Sprite" parent="Control/HBoxContainer/divertissement"]
position = Vector2( 304, 16 )
texture = SubResource( 5 )

[node name="Label4" type="Label" parent="Control/HBoxContainer/divertissement"]
margin_left = 320.0
margin_right = 352.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
editor/display_folded = true
margin_top = 270.0
margin_right = 352.0
margin_bottom = 342.0
__meta__ = {
"_edit_group_": true
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_right = 352.0
margin_bottom = 20.0

[node name="Alimenter" type="Button" parent="Control/VBoxContainer/HBoxContainer2"]
margin_right = 114.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Alimenter"

[node name="Jouer" type="Button" parent="Control/VBoxContainer/HBoxContainer2"]
margin_left = 118.0
margin_right = 232.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Jouer"

[node name="Calin" type="Button" parent="Control/VBoxContainer/HBoxContainer2"]
margin_left = 236.0
margin_right = 352.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Calin"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 24.0
margin_right = 352.0
margin_bottom = 44.0

[node name="Enseigner" type="Button" parent="Control/VBoxContainer/HBoxContainer3"]
margin_right = 174.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Enseigner"

[node name="Laver" type="Button" parent="Control/VBoxContainer/HBoxContainer3"]
margin_left = 178.0
margin_right = 352.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Laver"

[node name="Baby" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Baby"]
modulate = Color( 0.0352941, 0.972549, 0.290196, 1 )
position = Vector2( 162, 192 )
scale = Vector2( 0.217687, 0.217687 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Baby"]
anims/idle = SubResource( 6 )

[node name="Faim" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Jouer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="ApresRepas" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="LastFaim" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="LastHygiene" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="LastEducation" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="LastDivertissement" type="Timer" parent="."]
wait_time = 30.0
autostart = true
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/Alimenter" to="." method="_on_Alimenter_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/Jouer" to="." method="_on_Jouer_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/Calin" to="." method="_on_Calin_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer3/Enseigner" to="." method="_on_Enseigner_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer3/Laver" to="." method="_on_Laver_pressed"]
[connection signal="timeout" from="Faim" to="." method="_on_Faim_timeout"]
[connection signal="timeout" from="Jouer" to="." method="_on_Jouer_timeout"]
[connection signal="timeout" from="ApresRepas" to="." method="_on_ApresRepas_timeout"]
[connection signal="timeout" from="LastFaim" to="." method="_on_LastFaim_timeout"]
[connection signal="timeout" from="LastHygiene" to="." method="_on_LastHygiene_timeout"]
[connection signal="timeout" from="LastEducation" to="." method="_on_LastEducation_timeout"]
[connection signal="timeout" from="LastDivertissement" to="." method="_on_LastDivertissement_timeout"]
